--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 Flask==0.10.1
+Flask-PyMongo==0.4.1
+itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
-Werkzeug==0.9.6
-itsdangerous==0.24
-wsgiref==0.1.2
 pyjade==4.0.0
-Flask-PyMongo==0.4.1
+pymongo==3.2.2
+six==1.10.0
+Werkzeug==0.9.6
+youtube-dl==2016.5.30.2
