--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==0.10.1
 Flask-PyMongo==0.4.1
+Flask-Testing==0.5.0
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
@@ -7,3 +8,4 @@ pyjade==4.0.0
 six==1.10.0
 Werkzeug==0.9.6
 youtube-dl==2016.5.30.2
+gunicorn==19.6.0
