--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
+MONGODB_URI=mongodb://localhost/umq
+MONGO_DBNAME=heroku_4zc8jbqq
 SECRET_KEY="x\xb0\x82/{\xc3Y\xfa\x92Bz]\x86\x8a\xab\xfaPN\x16M\xd3@"
 
