--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
 DEBUG=True
-MONGODB_URI=mongodb://localhost/umq
+DATABASE_URL="postgresql://localhost/umq"
 SECRET_KEY="x\xb0\x82/{\xc3Y\xfa\x92Bz]\x86\x8a\xab\xfaPN\x16M\xd3@"
-
