--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
-Flask==0.10.1
-Flask-PyMongo==0.4.1
+alembic==0.8.8
+Flask==0.11.1
+Flask-Migrate==2.0.0
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.1
 Flask-Testing==0.5.0
+gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.7.3
+Mako==1.0.4
 MarkupSafe==0.23
-pyjade==4.0.0
+psycopg2==2.6.2
 six==1.10.0
+SQLAlchemy==1.0.15
 Werkzeug==0.9.6
-youtube-dl==2016.5.30.2
-gunicorn==19.6.0
+youtube-dl==2016.9.24
