--- a/alembic.ini
+++ b/alembic.ini
@@ -8,6 +8,7 @@
 # the 'revision' command, regardless of autogenerate
 # revision_environment = false
 
+script_location = alembic
 
 # Logging configuration
 [loggers]
