--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask-Migrate==2.0.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 Flask-Testing==0.5.0
+gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.7.3
 Mako==1.0.4
@@ -11,6 +12,5 @@ MarkupSafe==0.23
 psycopg2==2.6.2
 six==1.10.0
 SQLAlchemy==1.0.15
-uwsgi==2.0.14
 Werkzeug==0.9.6
 youtube-dl==2016.12.31
