--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 DEBUG=True
-DATABASE_URL="postgresql://localhost/umq"
+DATABASE_URL="postgresql://postgres:umq@postgres:5432/umq"
 SECRET_KEY="x\xb0\x82/{\xc3Y\xfa\x92Bz]\x86\x8a\xab\xfaPN\x16M\xd3@"
