--- a/alembic.ini
+++ b/alembic.ini
@@ -8,7 +8,7 @@
 # the 'revision' command, regardless of autogenerate
 # revision_environment = false
 
-script_location = alembic
+script_location = migrations
 
 # Logging configuration
 [loggers]
