--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
   postgres:
     image: library/postgres:9.6
     environment:
-      POSTGRES_PASSWORD: "umq"
-      POSTGRES_DB: "umq"
+      POSTGRES_PASSWORD: "postgres"
+      POSTGRES_DB: ""
     ports:
       - "5432:5432"
