--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-alembic==0.8.8
+alembic==1.0.5
+click==6.7
 Flask==0.11.1
 Flask-Migrate==2.0.0
 Flask-Script==2.0.5
@@ -10,7 +11,9 @@ Jinja2==2.7.3
 Mako==1.0.4
 MarkupSafe==0.23
 psycopg2==2.6.2
+python-dateutil==2.7.5
+python-editor==1.0.3
 six==1.10.0
 SQLAlchemy==1.0.15
 Werkzeug==0.9.6
-youtube-dl==2016.12.31
+youtube-dl==2019.1.2
