--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
-DEBUG=True
-DATABASE_URL="postgresql://postgres:umq@postgres:5432/umq"
+DB_USER="postgres"
+DB_PASSWORD="umq"
+DB_HOST="postgres"
+DB_PORT="5432"
+DB_NAME="umq"
 SECRET_KEY="x\xb0\x82/{\xc3Y\xfa\x92Bz]\x86\x8a\xab\xfaPN\x16M\xd3@"
+ECOSYSTEM="dev"
+FLASK_DEBUG=true
