--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-alembic==1.0.5
+alembic==1.0.8
+Click==7.0
+environs==4.1.0
 Flask==0.11.1
 Flask-SQLAlchemy==2.1
 Flask-Testing==0.5.0
@@ -7,8 +9,13 @@ itsdangerous==0.24
 Jinja2==2.7.3
 Mako==1.0.4
 MarkupSafe==0.23
-psycopg2==2.6.2
+marshmallow==2.19.2
+psycopg2==2.8.0
+python-dateutil==2.8.0
+python-dotenv==0.10.1
+python-editor==1.0.4
 six==1.10.0
 SQLAlchemy==1.0.15
+uWSGI==2.0.18
 Werkzeug==0.9.6
 youtube-dl==2019.1.2
