Move views to a blueprint, create_app() factory for tests, and some config files

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DB_USER="postgres"
-DB_PASSWORD="umq"
-DB_HOST="postgres"
-DB_PORT="5432"
-DB_NAME="umq"
-SECRET_KEY="x\xb0\x82/{\xc3Y\xfa\x92Bz]\x86\x8a\xab\xfaPN\x16M\xd3@"
-ECOSYSTEM="dev"
-FLASK_DEBUG=true
+DB_USER=postgres
+DB_PASSWORD=umq
+DB_HOST=postgres
+DB_PORT=5432
+DB_NAME=umq
+SECRET_KEY=x\xb0\x82/{\xc3Y\xfa\x92Bz]\x86\x8a\xab\xfaPN\x16M\xd3@
+ECOSYSTEM=dev
+FLASK_DEBUG=True
