--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 alembic==1.0.8
+atomicwrites==1.3.0
+attrs==19.1.0
 Click==7.0
+coverage==4.5.3
 environs==4.1.0
 Flask==1.0.2
 Flask-SQLAlchemy==2.1
@@ -10,12 +13,17 @@ Jinja2==2.10.1
 Mako==1.0.4
 MarkupSafe==0.23
 marshmallow==2.19.2
+more-itertools==7.0.0
+pluggy==0.9.0
+psycopg2==2.8
+psycopg2-binary==2.8.2
+py==1.8.0
+pytest==4.4.1
 python-dateutil==2.8.0
 python-dotenv==0.10.1
-psycopg2==2.8.0
 python-editor==1.0.4
 six==1.10.0
 SQLAlchemy==1.3.3
 uWSGI==2.0.18
 Werkzeug==0.15.2
-youtube-dl>=2019.4.17
+youtube-dl==2019.7.2
