Get track info and delete return proper json. Fixed bug displaying title after adding new track

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,14 +7,13 @@ norecursedirs =
     htmlcov
     tmp
     ve
-markers =
-    integration: mark a test as an integration test
-    unit: mark a test as a pure unit test
 flake8-ignore =
     test/* ALL
     app/deploy/* ALL
     setup.py ALL
     tasks.py ALL
+filterwarnings =
+    ignore::DeprecationWarning
 
 [pytest-watch]
 clear = True
