--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 alembic==1.0.8
+argh==0.26.2
 atomicwrites==1.3.0
 attrs==19.1.0
 Click==7.0
+colorama==0.4.1
 coverage==4.5.3
+docopt==0.6.2
 environs==4.1.0
 Flask==1.1.1
 Flask-SQLAlchemy==2.1
@@ -14,16 +17,21 @@ Mako==1.0.4
 MarkupSafe==0.23
 marshmallow==2.19.2
 more-itertools==7.0.0
+pathtools==0.1.2
 pluggy==0.9.0
 psycopg2==2.8
 psycopg2-binary==2.8.2
 py==1.8.0
 pytest==4.4.1
+pytest-flask==0.15.0
+pytest-watch==4.2.0
 python-dateutil==2.8.0
 python-dotenv==0.10.1
 python-editor==1.0.4
+PyYAML==5.1.1
 six==1.10.0
 SQLAlchemy==1.3.3
 uWSGI==2.0.18
+watchdog==0.9.0
 Werkzeug==0.15.2
-youtube-dl==2019.7.2
+youtube-dl==2019.8.13
