--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,11 @@ coverage==4.5.3
 docopt==0.6.2
 environs==4.1.0
 Flask==1.1.1
-Flask-SQLAlchemy==2.1
+Flask-Injector==0.12.2
+Flask-SQLAlchemy==2.4.1
 Flask-Testing==0.5.0
 gunicorn==19.6.0
+injector==0.18.3
 itsdangerous==0.24
 Jinja2==2.10.1
 Mako==1.0.4
@@ -30,7 +32,8 @@ python-dotenv==0.10.1
 python-editor==1.0.4
 PyYAML==5.1.1
 six==1.10.0
-SQLAlchemy==1.3.3
+SQLAlchemy==1.3.13
+typing-extensions==3.7.4.1
 uWSGI==2.0.18
 watchdog==0.9.0
 Werkzeug==0.15.5
