--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
   postgres:
     image: library/postgres:9.6
     environment:
-      POSTGRES_PASSWORD: "postgres"
-      POSTGRES_DB: ""
+      POSTGRES_PASSWORD: "umq"
+      POSTGRES_DB: "umq"
     ports:
       - "5432:5432"
