--- a/umq-web/package.json
+++ b/umq-web/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^14.14.28",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "bootstrap": "^4.6.0",
+    "font-awesome": "^4.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
