Start app from nginx

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -8,6 +8,8 @@ if-env = ECOSYSTEM=dev
 python-autoreload = 1
 endif =
 
-http-socket = :$(PORT)
+http-socket = /tmp/nginx.socket
 die-on-term = true
 master = true
+memory-report = true
+hook-accepting1 = exec:touch /tmp/app-initialized
