Run react frontend with docker compose

--- a/.env
+++ b/.env
@@ -5,4 +5,6 @@ DB_PORT=5432
 DB_NAME=umq
 SECRET_KEY=x\xb0\x82/{\xc3Y\xfa\x92Bz]\x86\x8a\xab\xfaPN\x16M\xd3@
 ECOSYSTEM=dev
-FLASK_DEBUG=True
+DEBUG=True
+FLASK_ENV=development
+PORT=8080
