--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,19 @@
 version: "2"
 services:
+  frontend:
+    build:
+      context: ./umq-web
+      dockerfile: Dockerfile
+    ports:
+      - "3001:3000"
+    depends_on:
+      - app
+    volumes:
+      - ./umq-web:/app
+      # - ./app/node_modules
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+
   app:
     build:
       context: .
@@ -11,6 +25,7 @@ services:
     volumes:
       - ./umq:/app/umq
     env_file: .env
+    
   postgres:
     image: library/postgres:9.6
     environment:
