--- a/nginx.conf
+++ b/nginx.conf
@@ -17,9 +17,16 @@ http {
     server {
         listen 8080;
         location / {
-            try_files $uri @app;
+            root /usr/share/nginx/html;
+            index index.html index.htm;
+            try_files $uri $uri/ /index.html =404;
+            add_header Cache-Control "no-cache";
         }
-        location @app {
+        location /static {
+            expires 1y;
+            add_header Cache-Control "public";
+        }
+        location /api {
             include uwsgi_params;
             uwsgi_pass unix:///tmp/uwsgi.sock;
         }
