Rename /playlist route to /api

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -12,4 +12,6 @@ http-socket = /tmp/nginx.socket
 die-on-term = true
 master = true
 memory-report = true
+
+; this tells the nginx buildpack to start when uwsgi is ready
 hook-accepting1 = exec:touch /tmp/app-initialized
