--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,20 @@
 version: "2"
+
 services:
+
   frontend:
     build:
       context: ./umq-web
       dockerfile: Dockerfile
     ports:
-      - "3001:3000"
+      - "3000:3000"
     depends_on:
       - app
     volumes:
       - ./umq-web:/app
-      # - ./app/node_modules
+      # - ./app/node_modules  # anonymous volume only needed on first build
     environment:
-      - CHOKIDAR_USEPOLLING=true
+      - CHOKIDAR_USEPOLLING=true  # used for hot reloading 
 
   app:
     build:
@@ -25,7 +27,7 @@ services:
     volumes:
       - ./umq:/app/umq
     env_file: .env
-    
+
   postgres:
     image: library/postgres:9.6
     environment:
